[package]
name = "async-ch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
futures = { version = "^0.3", features = ["std"] }

[dev-dependencies]
flume = "*"
# criterion = { version = "0.3.4", features = ["async_futures"] }
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
futures = { version = "^0.3", features = ["std"] }
tokio = { version = "^1.16.1", features = ["rt", "macros"] }
num_cpus = "1.13.0"
waker-fn = "1.1.0"

# [[bench]]
# name = "basic"
# harness = false